--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hookform/resolvers": "^2.9.10",
     "@mui/styles": "^5.11.11",
     "@mui/system": "^5.11.12",
+    "@mui/x-charts": "^7.6.2",
     "@mui/x-data-grid-pro": "^5.17.12",
     "@mui/x-license-pro": "^6.0.0",
     "@tanstack/react-query": "^5.40.0",
@@ -17,6 +18,7 @@
     "dotenv": "^16.0.3",
     "downshift": "^7.2.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "history": "^5.3.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.6.4",
@@ -26,6 +28,7 @@
     "qs": "^6.11.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.39.1",
