--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@fontsource/roboto": "^5.0.13",
     "@hookform/resolvers": "^2.9.10",
+    "@mui/icons-material": "^5.15.19",
     "@mui/styles": "^5.11.11",
     "@mui/system": "^5.11.12",
     "@mui/x-charts": "^7.6.2",
@@ -75,6 +77,7 @@
     "react-countdown-circle-timer": "^3.0.9",
     "react-google-recaptcha": "^2.1.0",
     "react-modal": "^3.15.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "tailwindcss": "^3.4.4"
   }
 }
